crates/alder-parse/src/item/snapshots/alder_parse__item__schema__tests__error_pick_names_missing_comma.snap
---
source: crates/alder-parse/src/item/schema.rs
description: "schema S from users { pick email name }"
---
End(
    ExpectedEnd {
        opening: Position {
            line: 1,
            column: 21,
        },
        boundary: Position {
            line: 1,
            column: 33,
        },
        unexpected: Position {
            line: 1,
            column: 34,
        },
    },
)
