crates/alder-parse/src/item/snapshots/alder_parse__item__schema__tests__error_rule_after_comma.snap
---
source: crates/alder-parse/src/item/schema.rs
description: "schema S { name: String, 5 }"
---
Rule(
    1,
    26,
)
