crates/alder-parse/src/item/snapshots/alder_parse__item__schema__tests__error_rule_arg.snap
---
source: crates/alder-parse/src/item/schema.rs
description: "schema S { name: min( }"
---
RuleArg(
    Start(
        1,
        23,
    ),
    1,
    23,
)
