crates/alder-parse/src/item/snapshots/alder_parse__item__schema__tests__error_rule_arg_unclosed.snap
---
source: crates/alder-parse/src/item/schema.rs
description: "schema S { name: min(3"
---
RuleArgEnd(
    ExpectedEnd {
        opening: Position {
            line: 1,
            column: 21,
        },
        boundary: Position {
            line: 1,
            column: 23,
        },
        unexpected: Position {
            line: 1,
            column: 23,
        },
    },
)
