crates/alder-parse/src/item/snapshots/alder_parse__item__schema__tests__error_rule_missing_comma_next_line.snap
---
source: crates/alder-parse/src/item/schema.rs
description: "schema S {\n    name: min(3)\n        max(10)\n}\n"
---
End(
    ExpectedEnd {
        opening: Position {
            line: 1,
            column: 10,
        },
        boundary: Position {
            line: 2,
            column: 17,
        },
        unexpected: Position {
            line: 3,
            column: 9,
        },
    },
)
