crates/alder-parse/src/item/snapshots/alder_parse__item__schema__tests__error_rule_reserved.snap
---
source: crates/alder-parse/src/item/schema.rs
description: "schema S { name: min(3), fn }"
---
Rule(
    1,
    26,
)
