crates/alder-parse/src/item/snapshots/alder_parse__item__schema__tests__error_type.snap
---
source: crates/alder-parse/src/item/schema.rs
description: "schema S { name: 5 }"
---
Type(
    Start(
        1,
        18,
    ),
    1,
    18,
)
