crates/alder-parse/src/item/snapshots/alder_parse__item__schema__tests__error_type_then_rule_missing_comma.snap
---
source: crates/alder-parse/src/item/schema.rs
description: "schema S { a: String min(1) }"
---
End(
    ExpectedEnd {
        opening: Position {
            line: 1,
            column: 10,
        },
        boundary: Position {
            line: 1,
            column: 21,
        },
        unexpected: Position {
            line: 1,
            column: 22,
        },
    },
)
