crates/alder-parse/src/item/snapshots/alder_parse__item__schema__tests__error_type_var_applied.snap
---
source: crates/alder-parse/src/item/schema.rs
description: "schema S { a: r[x], min(1) }"
---
End(
    ExpectedEnd {
        opening: Position {
            line: 1,
            column: 10,
        },
        boundary: Position {
            line: 1,
            column: 16,
        },
        unexpected: Position {
            line: 1,
            column: 16,
        },
    },
)
