crates/alder-parse/src/item/snapshots/alder_parse__item__schema__tests__error_unclosed.snap
---
source: crates/alder-parse/src/item/schema.rs
description: "schema S { name: min(3)"
---
End(
    ExpectedEnd {
        opening: Position {
            line: 1,
            column: 10,
        },
        boundary: Position {
            line: 1,
            column: 24,
        },
        unexpected: Position {
            line: 1,
            column: 24,
        },
    },
)
